--- a/Birthday Money.ipynb
+++ b/Birthday Money.ipynb
@@ -10,6 +10,10 @@
      "iopub.status.busy": "2022-12-31T21:13:05.780008Z",
      "iopub.status.idle": "2022-12-31T21:13:05.902759Z",
      "shell.execute_reply": "2022-12-31T21:13:05.902759Z"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-09-10T10:45:14.558731900Z",
+     "start_time": "2023-09-10T10:45:14.511088300Z"
     }
    },
    "outputs": [],
@@ -52,6 +56,10 @@
      "iopub.status.busy": "2022-12-31T21:13:05.902759Z",
      "iopub.status.idle": "2022-12-31T21:13:05.917655Z",
      "shell.execute_reply": "2022-12-31T21:13:05.917099Z"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-09-10T10:45:14.564259400Z",
+     "start_time": "2023-09-10T10:45:14.560728700Z"
     }
    },
    "outputs": [
@@ -92,6 +100,10 @@
      "iopub.status.busy": "2022-12-31T21:13:05.964904Z",
      "iopub.status.idle": "2022-12-31T21:13:06.180047Z",
      "shell.execute_reply": "2022-12-31T21:13:06.178036Z"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-09-10T10:45:14.634818100Z",
+     "start_time": "2023-09-10T10:45:14.565258500Z"
     }
    },
    "outputs": [
@@ -128,6 +140,10 @@
      "iopub.status.busy": "2022-12-31T21:13:06.184749Z",
      "iopub.status.idle": "2022-12-31T21:13:06.409012Z",
      "shell.execute_reply": "2022-12-31T21:13:06.408005Z"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-09-10T10:45:14.735018800Z",
+     "start_time": "2023-09-10T10:45:14.631819100Z"
     }
    },
    "outputs": [
@@ -167,6 +183,10 @@
      "iopub.status.busy": "2022-12-31T21:13:06.412018Z",
      "iopub.status.idle": "2022-12-31T21:13:06.419969Z",
      "shell.execute_reply": "2022-12-31T21:13:06.418964Z"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-09-10T10:45:14.736022900Z",
+     "start_time": "2023-09-10T10:45:14.731760900Z"
     }
    },
    "outputs": [
@@ -203,13 +223,17 @@
      "iopub.status.busy": "2022-12-31T21:13:06.422969Z",
      "iopub.status.idle": "2022-12-31T21:13:06.605963Z",
      "shell.execute_reply": "2022-12-31T21:13:06.605963Z"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-09-10T10:45:14.824151200Z",
+     "start_time": "2023-09-10T10:45:14.737023Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": "<IPython.core.display.Markdown object>",
-      "text/markdown": "|age|good_behaviour|birthday_money|\n|----|----|----|\n|10.0|False|0|\n|10.0|True|200|"
+      "text/markdown": "|age|good_behaviour|birthday_money|\n|----|----|----|\n|10.0|False|0|"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -241,6 +265,10 @@
      "iopub.status.busy": "2022-12-31T21:13:06.610986Z",
      "iopub.status.idle": "2022-12-31T21:13:06.844966Z",
      "shell.execute_reply": "2022-12-31T21:13:06.844966Z"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-09-10T10:45:14.902218900Z",
+     "start_time": "2023-09-10T10:45:14.821116500Z"
     }
    },
    "outputs": [
@@ -277,6 +305,10 @@
      "iopub.status.busy": "2022-12-31T21:13:06.849479Z",
      "iopub.status.idle": "2022-12-31T21:13:07.045315Z",
      "shell.execute_reply": "2022-12-31T21:13:07.045315Z"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-09-10T10:45:14.978241Z",
+     "start_time": "2023-09-10T10:45:14.899221600Z"
     }
    },
    "outputs": [
@@ -316,6 +348,10 @@
      "iopub.status.busy": "2022-12-31T21:13:07.048324Z",
      "iopub.status.idle": "2022-12-31T21:13:07.195718Z",
      "shell.execute_reply": "2022-12-31T21:13:07.195718Z"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-09-10T10:45:15.046526400Z",
+     "start_time": "2023-09-10T10:45:14.976260300Z"
     }
    },
    "outputs": [
